# trading-bot

./: .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
dags/: pipeline.py
docker-entrypoint-initdb.d/: init.sql
market_data/: .user.yml  dbt_project.yml  profiles.yml
market_data/macros/: generate_schema_name.sql
market_data/models/mart/: daily_market_summary.sql  schema.yml
market_data/models/staging/: schema.yml  stg_economic_indicators.sql  stg_prices.sql
src/: extract.py  extract_fred.py  load.py  quality.py  transform.py
tests/: test_transform.py
